[project]
name = "landsat-diff-h3"
version = "0.1.0"
description = "Landsat vegetation change detection aggregated to H3 hexagons"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.25",
    "numpy==2.2.0",
    "duckdb>=1.4.3",
    "geopandas>=1.1.2",
    "h3>=4.4.1",
    "ipykernel>=7.1.0",
    "lonboard>=0.13.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "odc-stac>=0.5.0",
    "osmnx>=2.0.7",
    "palettable>=3.3.3",
    "planetary-computer>=1.0.0",
    "pyarrow>=18.1.0",
    "pystac>=1.14.2",
    "pystac-client>=0.9.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.10",
    "xarray>=2024.1.0",
]
